src/types/tests/snapshots/tgbot__types__tests__file__animation-2.snap
---
source: src/types/tests/file.rs
expression: "Animation::new(30, \"file-id\", \"file-unique-id\", 200, 200)"
---
{
  "duration": 30,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 200,
  "width": 200
}
