src/types/tests/snapshots/tgbot__types__tests__file__animation.snap
---
source: src/types/tests/file.rs
expression: "Animation::new(243, \"file-id\", \"file-unique-id\", 200,\n200).with_file_name(\"File Name\").with_file_size(20480).with_mime_type(\"image/gif\").with_thumbnail(PhotoSize::new(\"thumb-file-id\",\n\"thumb-file-unique-id\", 24, 24).with_file_size(1024))"
---
{
  "duration": 243,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 200,
  "width": 200,
  "file_name": "File Name",
  "file_size": 20480,
  "mime_type": "image/gif",
  "thumbnail": {
    "file_id": "thumb-file-id",
    "file_unique_id": "thumb-file-unique-id",
    "height": 24,
    "width": 24,
    "file_size": 1024
  }
}
