src/types/tests/snapshots/tgbot__types__tests__file__audio-2.snap
---
source: src/types/tests/file.rs
expression: "Audio::new(243, \"file-id\", \"file-unique-id\")"
---
{
  "duration": 243,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id"
}
