src/types/tests/snapshots/tgbot__types__tests__file__audio.snap
---
source: src/types/tests/file.rs
expression: "Audio::new(243, \"file-id\",\n\"file-unique-id\").with_file_name(\"File Name\").with_file_size(10240).with_mime_type(\"audio/mpeg\").with_performer(\"Performer\").with_title(\"Title\").with_thumbnail(PhotoSize::new(\"thumb-file-id\",\n\"thumb-unique-file-id\", 24, 24).with_file_size(1024))"
---
{
  "duration": 243,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "file_name": "File Name",
  "file_size": 10240,
  "mime_type": "audio/mpeg",
  "performer": "Performer",
  "title": "Title",
  "thumbnail": {
    "file_id": "thumb-file-id",
    "file_unique_id": "thumb-unique-file-id",
    "height": 24,
    "width": 24,
    "file_size": 1024
  }
}
