src/types/tests/snapshots/tgbot__types__tests__file__document-2.snap
---
source: src/types/tests/file.rs
expression: "Document::new(\"file-id\", \"file-unique-id\")"
---
{
  "file_id": "file-id",
  "file_unique_id": "file-unique-id"
}
