src/types/tests/snapshots/tgbot__types__tests__file__document.snap
---
source: src/types/tests/file.rs
expression: "Document::new(\"file-id\",\n\"file-unique-id\").with_thumbnail(PhotoSize::new(\"thumb-file-id\",\n\"thumb-file-unique-id\", 24,\n24).with_file_size(1024)).with_file_name(\"File Name\").with_mime_type(\"image/jpeg\").with_file_size(10240)"
---
{
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "file_name": "File Name",
  "file_size": 10240,
  "thumbnail": {
    "file_id": "thumb-file-id",
    "file_unique_id": "thumb-file-unique-id",
    "height": 24,
    "width": 24,
    "file_size": 1024
  },
  "mime_type": "image/jpeg"
}
