src/types/tests/snapshots/tgbot__types__tests__file__file.snap
---
source: src/types/tests/file.rs
expression: "File::new(\"file-id\",\n\"file-unique-id\").with_file_path(\"file-path\").with_file_size(1024)"
---
{
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "file_size": 1024,
  "file_path": "file-path"
}
