src/types/tests/snapshots/tgbot__types__tests__file__photo_size-2.snap
---
source: src/types/tests/file.rs
expression: "PhotoSize::new(\"file-id\", \"file-unique-id\", 200, 200)"
---
{
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 200,
  "width": 200
}
